syntax = "proto3";

package stock_quotation;

import "google/protobuf/timestamp.proto";

import "money.proto";

message StockQuotationMessageProto {
    string ty = 1;
    string sy = 2;
    string bx = 3;
    money.MoneyProto bp = 4; 
    double bs = 5;
    string ax = 6;
    money.MoneyProto ap = 7;
    double as = 8;
    google.protobuf.Timestamp ti = 9;
    repeated string c = 10;
    string z = 11;
}
