syntax = "proto3";

package market_data;

import "google/protobuf/timestamp.proto";

import "money.proto";

message StockTradeMessageProto {
    string ty = 1;
    string sy = 2;
    int64 i = 3;
    string x = 4;
    market_data.MoneyMessageProto p = 5;
    double s = 6;
    repeated string c = 7;
    google.protobuf.Timestamp ti = 8;
    string z = 9;
}
